--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "library-management-system",
   "version": "1.0.0",
   "description": "REST-API-for libray management system",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon server.js"
   },
   "author": "sahas uthpala",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -18,6 +19,7 @@
     "mongoose": "^8.1.1"
   },
   "devDependencies": {
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.3"
   }
 }
